--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -15,12 +15,12 @@
 									</div>
 								{{- end }}
 								<div class="{{ .messagebox.classstring }}">
-									<label for="{{ .messagebox.id }}">Message</label>
-									<textarea name="{{ .messagebox.id }}" id="{{ .messagebox.id }}" rows="4"></textarea>
+									<!--<label for="{{ .messagebox.id }}">Message</label>
+									<textarea name="{{ .messagebox.id }}" id="{{ .messagebox.id }}" rows="0" disabled></textarea>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="{{ .submitbutton.value }}" class="{{ .submitbutton.classstring }}" /></li>
-								</ul>
+									<li><input type="submit" value="{{ .submitbutton.value }}" class="{{ .submitbutton.classstring }}" disabled/></li>
+								</ul>-->
 							</form>
 						</div>
 						<div class="{{ .socialclassstring }}">
